--- a/S3/Stuff/Content/html/css/hypest-score.css
+++ b/S3/Stuff/Content/html/css/hypest-score.css
@@ -52,9 +52,11 @@ body {
 }
 
 .player-name,
-.player-score {
+.player-score,
+.player-char-wrapper {
 	background-color: #320905;
 	margin: 0.1ch;
+	padding: 0.2ch;
 }
 
 .player-name {
@@ -68,8 +70,12 @@ body {
 	text-align: center;
 }
 
-.player-2 .player-score {
-	order: 1;
+.player-char {
+	width: 1.8ch;
+}
+
+.player-2 {
+	flex-direction: row-reverse;
 }
 
 .stream-footer {
