Changed max-min size to the players tags area.

--- a/S3/Stuff/Content/html/css/hypest-score.css
+++ b/S3/Stuff/Content/html/css/hypest-score.css
@@ -44,7 +44,8 @@ body {
 }
 
 .player {
-	min-width: 16ch;
+	min-width: 20ch;
+	max-width: 26ch;
 	background-color: transparent;
 	border: #320905 solid 4px;
 	padding: 0.1ch;
