--- a/packages/overlays/html/hypestmonthly/css/hypestboard.css
+++ b/packages/overlays/html/hypestmonthly/css/hypestboard.css
@@ -13,36 +13,21 @@ body {
     margin: 0;
     height: 100%;
     width: 100%;
-/*    background-color: magenta; */
+    background-color: #000;
 }
 
 .scoreboard {
-    display: flex;
     height: 100vh;
-}
-
-
-.scoreboard-logo-wrapper {
-    display: inline-block;
-    width: 8vw;
-    text-align: center;
-}
-
-.scoreboard-logo-wrapper .scoreboard-logo-bg {
-    background-image: linear-gradient(to bottom, #6B2024 0%, #EC2024 65%, #FFCDFF 100%);
-}
-
-.scoreboard-logo-wrapper .scoreboard-logo-img {
-    height: 5vh;
+    display: flex;
 }
 
 .sidebar {
     position: relative;
-    grid-column-start: 1;
     width: 25vw;
     color: #fff;
     background: linear-gradient(to right, #231f20 0%, #414042 50%, #231f20 100%);
     padding: 1.5vw 5vh;
+    height: 100vh;
 }
 
 .sidebar:before,
@@ -74,7 +59,7 @@ body {
     align-content: center;
     text-align: center;
     font-size: 3vh;
-    background: #000;
+    background: #0f0;
     height: 20vh;
     font-variant: small-caps;
 }
@@ -100,124 +85,128 @@ body {
 }
 
 .game {
-    grid-column-start: 2;
-    width: 80vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-
-.entrants,
-.entrant,
-.players,
-.player {
-    display: flex;
-    justify-content: space-evenly;
-    align-content: center;
+    display: inline-block;
+    width: 75vw;
 }
 
 .entrants {
-    width: 100%;
-}
-
-.entrant + .entrant,
-.player + .player {
-    margin-left: 5vw;
-}
-
-.player {
-    height: 100%;
-    padding-left: 2vw;
-    padding-right: 2vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     color: #fff;
 }
 
-.player-country {
-    margin-right: 0.25vh;
-}
-
-.player-character {
-    margin-left: 0.25vh;
-}
-
-.player-character img {
-    height: 1em;
-}
-
-.player-character-color {
-    display: inline-block;
-    width: 1em;
-    height: 1em;
-    border-radius: 50%;
+.entrant {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .entrant-score {
-    background-image: linear-gradient(to bottom, #231F20 0%, #939598 41%, #414042 81%, #231F20 100%);
-    padding-left: 1vw;
-    padding-right: 1vw;
-    color: white;
-}
-
-
-.tournament {
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
-    width: 100%;
-}
-
-.tournament-name,
-.tournament-round {
-    border: 3px solid black;
-    padding: 1vh;
     text-align: center;
+    
+    font-size: 200%;
+    width: 6vh;
+    height: 6vh;
+    padding: 1vh;
 }
 
-.trapezoid-wrapper,
-.trapezoid-inner {
-    clip-path: polygon(0 0, 100% 0, calc(100% - 1vw) 100%, 1vw 100%);
+.entrant-players {
+    display: flex;
+    flex-direction: column;
 }
 
-.trapezoid-wrapper {
-    background-color: #bcbec0;
-    padding: 0;
+.entrant-player {
+    display: flex;
+    flex-direction: row;
+    
+    padding: 0.75vh;
 }
 
-.trapezoid-inner {
+.entrant-player-character {
+    border: none;
+    border-bottom: solid 0.75vh;
+    height: 1.5em;
+}
+
+.entrant-player-character img {
+    max-height: 1em;
+}
+
+.entrant-0 .entrant-score {
+    order: 1;
+}
+
+.entrant-player + .entrant-player {
+    margin-top: 0.5vh;
+}
+
+.entrant-player-item + .entrant-player-item {
+    margin-left: 1ch;
+}
+
+.entrant-0 .entrant-score {
+    margin-left: 1vh;
+    border-radius: 1vh 2vh 1vh 2vh;
+}
+
+.entrant-1 .entrant-score {
+    margin-right: 1vh;
+    border-radius: 2vh 1vh 2vh 1vh;
+}
+
+.entrant-0 .entrant-player {
+    border-radius: 1vh 3vh 1vh 3vh;
+}
+
+.entrant-1 .entrant-player {
+    border-radius: 3vh 1vh 3vh 1vh;
+}
+
+.entrant-1 {
+    order: 2;
+}
+
+.tournament-round-wrapper {
+    order: 1;
+}
+
+.tournament-round {
+    padding: 1vh;
+    border-radius: 1vh 1vh 3vh 3vh;
+}
+
+.gradient-player,
+.gradient-score,
+.gradient-round {
+    border: 0.5vh solid #bcbec0;
+}
+
+.gradient-player {
+    background: linear-gradient(to right, #231f20 0%, #414042 50%, #231f20 100%);
+}
+
+.gradient-score {
+    background: linear-gradient(to bottom, #231f20 0, #939598 41%, #414042 81%, #231f20 100%);
+}
+
+.gradient-round {
+    background: linear-gradient(to bottom, #6B2024 0%, #EC2024 65%, #FFCDFF 100%)
+}
+
+.game-footer {
+    position: absolute;
+    bottom: 0;
     display: block;
-    width: 100%;
-    height: 100%;
-    transform: scale(0.85);
+    text-align: center;
+    width: 75vw;
+    padding: 2vh;
 }
 
-.parallelogram-r-wrapper,
-.parallelogram-r-inner {
-    clip-path: polygon(20% 0, 100% 0%, 80% 100%, 0% 100%);
+.game-footer-logo {
+    max-height: 2em;
 }
 
-.parallelogram-r-wrapper {
-    background-color: #bcbec0;
-    padding: 0;
-}
-
-.parallelogram-r-inner {
-    width: 100%;
-    height: 100%;
-    transform: scale(0.85);
-}
-
-.parallelogram-l-wrapper,
-.parallelogram-l-inner {
-    clip-path: polygon(0 0, 81% 0, 100% 100%, 20% 100%);
-}
-
-.parallelogram-l-wrapper {
-    background-color: #bcbec0;
-    padding: 0;
-}
-
-.parallelogram-l-inner {
-    width: 100%;
-    height: 100%;
-    transform: scale(0.85);
-}
