--- a/packages/overlays/html/hypestmonthly/css/hypestboard.css
+++ b/packages/overlays/html/hypestmonthly/css/hypestboard.css
@@ -13,7 +13,7 @@ body {
     margin: 0;
     height: 100%;
     width: 100%;
-    background-color: #000;
+    background-color: #0f0;
 }
 
 .scoreboard {
