--- a/packages/overlays/html/hypestmonthly/css/hypestboard.css
+++ b/packages/overlays/html/hypestmonthly/css/hypestboard.css
@@ -23,10 +23,10 @@ body {
 
 .sidebar {
     position: relative;
-    width: 33vw;
+    width: 28vw;
     color: #fff;
     background: linear-gradient(to right, #231f20 0%, #414042 50%, #231f20 100%);
-    padding: 1.5vw 10vh;
+    padding: 1.5vw 6vh;
     height: 100vh;
 }
 
@@ -78,23 +78,30 @@ body {
     font-variant: small-caps;
 }
 
-.sidebar-contact {
+.sidebar-contacts {
     margin-top: 2vh;
+    columns: 2;
+    font-size: 0.9em;
 }
 
-.sidebar-box.logos {
+.sidebar-contact {
+    display: block;
+}
+
+.sidebar-box.sidebar-logos {
     background-color: transparent;
 }
 
-.streaming {
-    margin-top: 3vh;
+.sidebar-commentators {
+    margin-top: 5vh;
 }
 
 .game {
     display: block;
     padding: 3vh 0;
-    width: 67vw;
+    width: 72vw;
     position: relative;
+    /*! background: green; */
 }
 
 .entrants {
