--- a/packages/overlays/html/crewbattle/css/scoreboard-720p.css
+++ b/packages/overlays/html/crewbattle/css/scoreboard-720p.css
@@ -17,6 +17,7 @@ body {
     background-size: cover;
     background-position: center;
     font-family: 'Coolvetica Rg';
+    color: #fff;
 }
 
 .entrant {
